# brinda-web

./: .env.example  .gitignore  README.md  deploy-with-env.sh  package-lock.json  package.json
apps/api/: .env.example  debug_analytics.py  debug_analytics_v2.py  headers.txt  migrate_dates.py  pyproject.toml  reproduce_webhook_error.py  requirements.txt  verify_analytics.py
apps/api/app/: __init__.py  config.py  database.py  main.py
apps/api/app/middleware/: __init__.py  auth.py  logging.py
apps/api/app/models/: __init__.py  attendance.py  client.py  employee.py  eod_summary.py  product.py  sale.py  task.py  user.py
apps/api/app/repository/: attendance_repository.py  client_repository.py  emp_analytics_repository.py  employee_repository.py  eod_summary_repository.py  task_repository.py  user_repository.py
apps/api/app/routes/: __init__.py  all_emp_analytics.py  analytics.py  attendance.py  auth.py  clients.py  contact.py  dashboard.py  emp_analytics.py  employees.py  eod_summary.py  products.py  sync.py  tasks.py  webhooks.py
apps/api/app/schemas/: all_emp_analytics.py  analytics.py  client.py  contact.py  emp_analytics.py  employee.py  product.py  sale.py  task.py  unolo.py  user.py
apps/api/app/services/: __init__.py  all_emp_analytics.py  (+10 more)
apps/api/logs/: api.log.2026-01-30
apps/api/scripts/: init_indexes.py  repro_task_analytics.py  test_rbac.py  test_sync.py  test_user_sync.py  verify_client_webhook_fix.py  verify_indexes.py  verify_task_webhook.py  verify_webhook_fix.py  verify_webhook_fix_all.py  verify_webhook_transforms.py  verify_webhook_types.py
(+114 files in other folders)
